--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,25 +1,34 @@
-name: Run Tests
-
+name: Test
 on:
-  - push
-  - pull_request
-
+  push:
+    branches:
+      - master
 jobs:
-  build:
+  test:
+    name: Test Application
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
-
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v1
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.8
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install tox tox-gh-actions
-    - name: Test with tox
-      run: tox
+        pip install -r requirements_test.txt
+        pip install coverage
+    - name: Install gnd-app
+      run: pip install . --use-feature=in-tree-build
+    - name: Run migrations
+      run: python manage.py migrate
+    - name: Run tests
+      run: coverage run manage.py test
+    - name: Create Coverage Report
+      run: coverage xml
+    - name: "Upload coverage to Codecov"
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: ./coverage.xml
+        fail_ci_if_error: true
