--- a/.coveragerc
+++ b/.coveragerc
@@ -6,6 +6,9 @@ omit =
     *site-packages*
     *tests*
     *.tox*
+    ./manage.py
+    ./*/migrations/*
+    ./project/*
 show_missing = True
 exclude_lines =
     raise NotImplementedError
